feat(setup) :sparkles: db config and ignore env

--- a/.env.local
+++ b/.env.local
@@ -18,4 +18,4 @@ APP_ENV=dev
 APP_SECRET=03c627ee715184135a0e673f613d1eea
 ###< symfony/framework-bundle ###
 
-DATABASE_URL="mysql://user:pass@localhost/dbname"
+DATABASE_URL="mysql://root:root@localhost/fbs"
